# pilot

./: .gitignore  CLAUDE.md  CONTEXT.md  DEMO.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_WORKFLOW_GUIDE.md  INTER_AGENT_COMMUNICATION.md  README.md  SUMMARY.md  demo.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_accessibility.py  test_install.py
.cursor/rules/: code-quality.mdc  development-practices.mdc  documentation.mdc  language-standards.mdc  project-structure.mdc
docs/: ARCHITECTURE_OVERVIEW.md  CREWAI_ARCHITECTURE.md  CREWAI_INTER_AGENT_COMMUNICATION.md  CREWAI_MIGRATION_SUMMARY.md  OSWORLD_BENCHMARK.md  TWILIO.md
examples/: basic_usage.py  test_platform_detection.py
src/computer_use/: __init__.py  crew.py  main.py
src/computer_use/agents/: __init__.py  browser_agent.py  coding_agent.py  coordinator.py  gui_agent.py  system_agent.py
src/computer_use/config/: __init__.py  agents.yaml  llm_config.py  tasks.yaml  timing_config.py
src/computer_use/crew_tools/: __init__.py  analyze_image_tool.py  capability_tools.py  coding_tools.py  gui_basic_tools.py  gui_interaction_tools.py  instrumented_tool.py  observation_tools.py  system_tools.py  web_tools.py
src/computer_use/prompts/: browser_prompts.py  orchestration_prompts.py
src/computer_use/schemas/: __init__.py  actions.py  gui_elements.py  responses.py  task_analysis.py  task_output.py  tool_types.py  workflow.py
src/computer_use/services/: __init__.py  app_state.py  audio_capture.py  crew_gui_delegate.py  state_observer.py  twilio_service.py  voice_input_service.py  webhook_server.py
src/computer_use/tools/: __init__.py  browser_tool.py  crewai_tool_wrappers.py  file_tool.py  input_tool.py  platform_registry.py  process_tool.py  screenshot_tool.py  twilio_controller.py
src/computer_use/utils/: __init__.py  command_confirmation.py  coordinate_validator.py  live_status.py  logging_config.py  permissions.py  platform_detector.py  platform_helper.py  ui.py  (+1 more)
src/pilot/: __init__.py  crew.py  main.py
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  performance_benchmarks.py  profile_crew_execution.py  test_accessibility.py  test_accessibility_cross_platform.py  test_accessibility_refactored.py  test_app_integration.py  test_browser_gui_delegation.py  test_calculator_clicks.py  test_crew_tools.py  test_end_to_end.py  test_hierarchical_delegation.py  test_image_tools.py  test_integration.py  test_macos_accessibility.py  test_ocr_engines.py  test_paste_behavior.py  test_screenshot.py  test_tui_rendering.py  test_tui_resize.py  test_tui_threading.py  test_vision_tool_integration.py  test_voice_input.py
tests/benchmark_results/: baseline.json  benchmark_20251230_135547.json  benchmark_20251230_135654.json  benchmark_20251230_135743.json  benchmark_20251231_200446.json
(+155 files in other folders)
